@@ -1,3 +1,8 @@
+106x.	[doc]		sar
+	Remove description of option[xx].text operator from classification
+	until it's use becomes clearer.
+	(Trac #4218, git TBD)
+
 1065.	[func]		tomek
 	Configuration parameters for setting up external hosts storage
 	are now implemented. This feature is considered experimental
